#
# This file is part of rasdaman community.
#
# Rasdaman community is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Rasdaman community is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with rasdaman community.  If not, see <http://www.gnu.org/licenses/>.
#
# Copyright 2003, 2004, 2005, 2006, 2007, 2008, 2009 Peter Baumann /
# rasdaman GmbH.
#
# For more information please see <http://www.rasdaman.org>
# or contact Peter Baumann via <baumann@rasdaman.com>.   
#
# MAKEFILE FOR:
# network
#
# COMMENTS:
# - still waits to be really integrated completely (akg namespace, ...)
#
##################################################################

lib_LIBRARIES=libnetwork.a
libnetwork_a_SOURCES= akgnet_commbuffer.cc akgnet_commbuffer.hh \
                      akgnet_file.cc akgnet_file.hh \
                      akgnet_nbcomm.cc akgnet_nbcomm.hh \
                      akgnet_server.cc akgnet_server.hh \
                      akgnet_fdescr.cc akgnet_fdescr.hh \
                      akgnet_inetaddr.cc akgnet_inetaddr.hh \
                      akgnet_selector.cc akgnet_selector.hh \
                      akgnet_socket.cc akgnet_socket.hh \
                      akgnetwork.hh akgnet_common.hh


CLEANFILES=core                      
